--- a/packages/material/scss/treeview/_variables.scss
+++ b/packages/material/scss/treeview/_variables.scss
@@ -6,15 +6,15 @@ $kendo-treeview-font-family: $font-family !default;
 /// Font size of the treeview component.
 /// @group treeview
 $kendo-treeview-font-size: $font-size-lg !default;
-$kendo-treeview-font-size-sm: $font-size-lg !default;
-$kendo-treeview-font-size-md: $font-size-lg !default;
+$kendo-treeview-font-size-sm: $font-size-md !default;
+$kendo-treeview-font-size-md: $font-size-md !default;
 $kendo-treeview-font-size-lg: $font-size-lg !default;
 /// Line height of the treeview component.
 /// @group treeview
 $kendo-treeview-line-height: 1.25 !default;
-$kendo-treeview-line-height-sm: 1.25 !default;
-$kendo-treeview-line-height-md: 1.25 !default;
-$kendo-treeview-line-height-lg: 1.25 !default;
+$kendo-treeview-line-height-sm: ( 20 / 14 ) !default;
+$kendo-treeview-line-height-md: ( 20 / 14 ) !default;
+$kendo-treeview-line-height-lg: 1.5 !default;
 /// Indentation of child groups in treeview component.
 /// @group treeview
 $kendo-treeview-indent: 16px !default;
@@ -30,7 +30,7 @@ $kendo-treeview-item-padding-x-lg: map-get( $spacing, 4 ) !default;
 $kendo-treeview-item-padding-y: map-get( $spacing, 2 ) !default;
 $kendo-treeview-item-padding-y-sm: map-get( $spacing, 2 ) - map-get( $spacing, thin ) !default;
 $kendo-treeview-item-padding-y-md: map-get( $spacing, 2 ) !default;
-$kendo-treeview-item-padding-y-lg: map-get( $spacing, 2 ) + map-get( $spacing, thin ) !default;
+$kendo-treeview-item-padding-y-lg: map-get( $spacing, 2 ) !default;
 /// Border width of treeview items.
 /// @group treeview
 $kendo-treeview-item-border-width: 0px !default;
