--- a/packages/default/scss/list/_variables.scss
+++ b/packages/default/scss/list/_variables.scss
@@ -10,8 +10,8 @@ $kendo-list-font-size-lg: $font-size-lg !default;
 /// Line height of the list component, if no size is set.
 /// @group list
 $kendo-list-line-height: null !default;
-$kendo-list-line-height-sm: null !default;
-$kendo-list-line-height-md: null !default;
+$kendo-list-line-height-sm: $line-height-md !default;
+$kendo-list-line-height-md: $line-height-md !default;
 $kendo-list-line-height-lg: $line-height-lg !default;
 
 /// Horizontal padding of list header, if no size is set.
