--- a/packages/fluent/scss/core/module-system/_components.scss
+++ b/packages/fluent/scss/core/module-system/_components.scss
@@ -62,7 +62,7 @@ $components: (
     "dropzone",
 
     // Command interfaces
-    "actions",
+    "action-buttons",
     "appbar",
     "fab",
     "menu",
