--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -90,7 +90,7 @@
 
 
 // Command interfaces
-// @use "action-buttons";
+@use "action-buttons";
 // @use "appbar";
 // @use "fab";
 // @use "menu";
@@ -254,7 +254,7 @@
 
 
     // Command interfaces
-    // @include action-buttons.styles();
+    @include action-buttons.styles();
     // @include appbar.styles();
     // @include fab.styles();
     // @include menu.styles();
