--- a/packages/fluent/scss/window/_layout.scss
+++ b/packages/fluent/scss/window/_layout.scss
@@ -140,6 +140,7 @@
         display: flex;
         flex-flow: row wrap;
         align-items: center;
+        gap: var( --kendo-window-buttongroup-spacing, #{$kendo-window-buttongroup-spacing} );
         overflow: hidden;
     }
 
