--- a/packages/classic/scss/dropdowngrid/_index.scss
+++ b/packages/classic/scss/dropdowngrid/_index.scss
@@ -3,6 +3,7 @@
 
 // Dependencies
 @import "../common/_index.scss";
+@import "../table/_index.scss";
 @import "../input/_index.scss";
 @import "../floating-label/_index.scss";
 @import "../combobox/_index.scss";
