--- a/packages/default/scss/calendar/_theme.scss
+++ b/packages/default/scss/calendar/_theme.scss
@@ -25,7 +25,8 @@
 
 
         // Today navigation
-        .k-nav-today {
+        .k-nav-today,
+        .k-calendar-nav-today {
             color: $calendar-today-nav-text;
 
             &:hover,
