--- a/packages/fluent/scss/calendar/_layout.scss
+++ b/packages/fluent/scss/calendar/_layout.scss
@@ -129,7 +129,8 @@
             font-weight: bold;
         }
         .k-today,
-        .k-nav-today {
+        .k-nav-today,
+        .k-calendar-nav-today {
             text-decoration: none;
             cursor: pointer;
             outline: none;
@@ -435,7 +436,9 @@
         .k-nav-prev,
         .k-nav-next,
         .k-prev-view,
-        .k-next-view {
+        .k-next-view,
+        .k-calendar-nav-prev,
+        .k-calendar-nav-next {
             transform: scaleX(-1);
         }
     }
