--- a/packages/material/scss/calendar/_layout.scss
+++ b/packages/material/scss/calendar/_layout.scss
@@ -7,7 +7,8 @@
         .k-title,
         .k-calendar-title,
         .k-nav-fast,
-        .k-nav-today {
+        .k-nav-today,
+        .k-calendar-nav-today {
             font-weight: 500;
             text-transform: none;
         }
