--- a/packages/default/scss/colorpicker/_index.scss
+++ b/packages/default/scss/colorpicker/_index.scss
@@ -4,8 +4,7 @@
 // Dependencies
 @import "../input/_index.scss";
 @import "../button/_index.scss";
-@import "../colorpalette/_index.scss";
-@import "../colorgradient/_index.scss";
+@import "../coloreditor/_index.scss";
 @import "../popup/_index.scss";
 @import "../icons/_index.scss";
 
