--- a/packages/default/scss/pager/_theme.scss
+++ b/packages/default/scss/pager/_theme.scss
@@ -1,6 +1,7 @@
 @include exports("pager/theme") {
 
-    .k-pager-wrap {
+    .k-pager-wrap,
+    .k-pager {
         @include fill(
             $pager-text,
             $pager-bg,
