--- a/packages/default/scss/pdf-viewer/_layout.scss
+++ b/packages/default/scss/pdf-viewer/_layout.scss
@@ -23,7 +23,8 @@
             flex: 0 0 auto;
             z-index: 2;
         }
-        .k-toolbar .k-pager-wrap {
+        .k-toolbar .k-pager-wrap,
+        .k-toolbar .k-pager {
             padding: 0;
             border-width: 0;
             color: inherit;
